--- a/notebook/02_Polars_100_Knocks(all_answer_displayed).ipynb
+++ b/notebook/02_Polars_100_Knocks(all_answer_displayed).ipynb
@@ -32,9 +32,9 @@
     "[pandasから移行する人向け polars使用ガイド](https://qiita.com/nkay/items/9cfb2776156dc7e054c8)  \n",
     "<br>\n",
     "② Polars100本ノックの解答表示版に軽く目を通す  \n",
-    "[Polars_100_Knocks_for _Begginer_all_answers_displayes] (http://xxxxxxxxxxxxxx)  \n",
+    "[Polars_100_Knocks_for _Begginer_all_answers_displayes](https://github.com/kunishou/Polars_100_knocks/blob/main/notebook/02_Polars_100_Knocks(all_answer_displayed).ipynb)  \n",
     "<br>\n",
-    "③ Polars100本ノックに取り組む  "
+    "③ Polars100本ノックに取り組む"
    ]
   },
   {
