Colaboratory を使用して作成しました

--- a/02_Polars_100_Knocks_for_colab_all_answer_displayed.ipynb
+++ b/02_Polars_100_Knocks_for_colab_all_answer_displayed.ipynb
@@ -604,7 +604,7 @@
       ],
       "source": [
         "# 【2】\n",
-        "# dfに読み込んだデータの最初の5行を表示\n",
+        "# glimpseを用いてdfに読み込んだデータの最初の10要素を表示\n",
         "print(ans[2]) #解答表示\n",
         "df = initialize1() #初期化\n",
         "\n",
