--- a/notebook/01_Polars_100_Knocks.ipynb
+++ b/notebook/01_Polars_100_Knocks.ipynb
@@ -40,17 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install polars==0.15.16\n",
-    "!pip show pyarrow==10.0.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Shift + Enterで題材データ、回答コードを読み込んで下さい\n",
+    "\n",
+    "!pip install polars==0.15.16\n",
+    "!pip show pyarrow==10.0.1\n",
+    "\n",
     "import pandas as pd\n",
     "import polars as pl\n",
     "import glob\n",
@@ -115,7 +109,7 @@
    "outputs": [],
    "source": [
     "# 【2】\n",
-    "# dfに読み込んだデータの最初の5行を表示\n",
+    "# glimpseを用いてdfに読み込んだデータの最初の要素10個を表示\n",
     "#print(ans[2]) #解答表示\n",
     "df = initialize1() #初期化\n",
     "\n",
