--- a/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
+++ b/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
@@ -36,16 +36,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install polars==0.15.16\n",
-    "!pip show pyarrow==10.0.1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -66,6 +56,10 @@
    ],
    "source": [
     "# Shift + Enterで題材データ、回答コードを読み込んで下さい\n",
+    "\n",
+    "!pip install polars==0.15.16\n",
+    "!pip show pyarrow==10.0.1\n",
+    "\n",
     "import pandas as pd\n",
     "import polars as pl\n",
     "import glob\n",
@@ -570,7 +564,7 @@
    ],
    "source": [
     "# 【2】\n",
-    "# dfに読み込んだデータの最初の5行を表示\n",
+    "# glimpseを用いてdfに読み込んだデータの最初の要素10個を表示\n",
     "print(ans[2]) #解答表示\n",
     "df = initialize1() #初期化\n",
     "\n",
