--- a/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
+++ b/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
@@ -43,6 +43,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Requirement already satisfied: polars==0.15.16 in c:\\users\\owner\\anaconda3\\lib\\site-packages (0.15.16)\n",
+      "Requirement already satisfied: typing_extensions>=4.0.0 in c:\\users\\owner\\anaconda3\\lib\\site-packages (from polars==0.15.16) (4.4.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: You are using pip version 21.2.4; however, version 23.0 is available.\n",
+      "You should consider upgrading via the 'C:\\Users\\owner\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Package(s) not found: pyarrow==10.0.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[answer0]\n",
       "\n",
       "このように解答コード例がここに表示されます。\n",
@@ -518,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +549,7 @@
      "text": [
       "[answer2]\n",
       "\n",
-      "df.glimpse()\n",
+      "print(df.glimpse())\n",
       "\n",
       "----------------------------------------------\n",
       "\n",
