--- a/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
+++ b/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
@@ -34196,7 +34196,8 @@
    ],
    "source": [
     "# 【71】\n",
-    "# df2とdf3のそれぞれの行を組み合わせた\n",
+    "# df2とdf3のそれぞれの行を全通り組み合わせた\n",
+    "# dataframeを作成\n",
     "print(ans[71]) #解答表示\n",
     "df2 = initialize2() #初期化\n",
     "\n",
