--- a/01_Polars_100_Knocks_for_colab.ipynb
+++ b/01_Polars_100_Knocks_for_colab.ipynb
@@ -1376,7 +1376,8 @@
       "outputs": [],
       "source": [
         "# 【71】\n",
-        "# df2とdf3のそれぞれの行を組み合わせた\n",
+        "# df2とdf3のそれぞれの行を全通り組み合わせた\n",
+        "# dataframeを作成\n",
         "#print(ans[71]) #解答表示\n",
         "df2 = initialize2() #初期化\n",
         "\n",
