Colaboratory を使用して作成しました

--- a/01_Polars_100_Knocks_for_colab.ipynb
+++ b/01_Polars_100_Knocks_for_colab.ipynb
@@ -29,17 +29,10 @@
         "**本コンテンツ作成時のPolarsのバージョンは0.15.16**\n",
         "  \n",
         "作成日:2023年2月11日  \n",
-        "最終更新日:2023年2月11日  \n",
+        "最終更新日:2023年2月24日  \n",
         "再配布・改編不可  \n",
-        "作成者：[kunishou](https://qiita.com/kunishou)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RJikGiVXfZRp"
-      },
-      "source": [
+        "作成者：[kunishou](https://qiita.com/kunishou)\n",
+        "<br>  \n",
         "**以下の手順で100本ノックに取り組むことでより習熟しやすくなります。**\n",
         "\n",
         "① 以下のPolarsに関する記事を一読する  \n",
@@ -851,8 +844,8 @@
       "outputs": [],
       "source": [
         "# 【42】\n",
-        "# applyを用いてdfのfare列に2を掛けて、\n",
-        "# age列に1を足して\n",
+        "# applyを用いてdfのparch列に2を掛けて、\n",
+        "# sibsp列に1を足して\n",
         "# 先頭の5行を表示\n",
         "#print(ans[42]) #解答表示\n",
         "df = initialize1() #初期化\n",
