Colaboratory を使用して作成しました

--- a/02_Polars_100_Knocks_for_colab_all_answer_displayed.ipynb
+++ b/02_Polars_100_Knocks_for_colab_all_answer_displayed.ipynb
@@ -29,17 +29,10 @@
         "**本コンテンツ作成時のPolarsのバージョンは0.15.16**\n",
         "  \n",
         "作成日:2023年2月11日  \n",
-        "最終更新日:2023年2月11日  \n",
+        "最終更新日:2023年2月24日  \n",
         "再配布・改編不可  \n",
-        "作成者：[kunishou](https://qiita.com/kunishou)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ioBxM2Ujgff4"
-      },
-      "source": [
+        "作成者：[kunishou](https://qiita.com/kunishou)\n",
+        "<br>  \n",
         "**以下の手順で100本ノックに取り組むことでより習熟しやすくなります。**\n",
         "\n",
         "① 以下のPolarsに関する記事を一読する  \n",
@@ -1281,14 +1274,22 @@
       "execution_count": null,
       "metadata": {
         "id": "_2cFAY5wgfgH",
-        "outputId": "09a540a8-b172-428b-a947-3ec574a393b7"
+        "outputId": "3417de26-5315-4f38-9e78-297712273c08",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[answer6]\n",
+            "\n",
+            "df.sort('fare')\n",
+            "\n",
+            "[別解]\n",
             "\n",
             "df.select(pl.all().sort_by('fare'))\n",
             "\n",
@@ -1296,19 +1297,28 @@
             "----------------------------------------------\n",
             "\n",
             "[Tips]\n",
-            "・要素でソートするときはsort_by()を使用\n",
-            "・デフォルトでは昇順\n",
+            "・dataframe.sort()で指定した列でソートが可能\n",
+            "　デフォルトでは昇順\n",
+            "・pl.col().sort_by()でもソート可能\n",
             "・降順でソートしたい場合は reverse=True を指定\n",
             "・ソートする列を複数指定可能\n",
+            "・nullを最後に表示させたい場合は nulls_last=True を指定\n",
             "\n",
             "ex) fare列で降順でソートした後にage列で降順にソートしたい場合は\n",
             "　　以下のように書く\n",
             "※ リスト内でage列を先に書く点に注意\n",
             "\n",
+            "df.sort(['age','fare'], reverse=True)\n",
+            "\n",
+            "(pl.col().sort_by()を使う場合)\n",
+            "\n",
             "df.select(pl.all().sort_by(['age', 'fare'], reverse=True))\n",
             "\n",
-            "・似たメソッドにsort()があるが、これはカラムごとに独立してソートされる点に注意\n",
-            "※ dataframe全体を前処理するようなときは基本的にsort_by()を使うのが良いと思います\n",
+            "\n",
+            "\n",
+            "・似たメソッドにpl.col().sort()があるが、これはカラムごとに独立してソートされる点に注意\n",
+            "※ dataframe全体を前処理するようなときは基本的にdataframe.sort()もしくは\n",
+            "　 pl.col().sort_by()を使うのが良いと思います\n",
             "\n",
             "ex) print(df.select(pl.col(['fare', 'age']).sort(reverse=True, nulls_last=True)).head())\n",
             "\n",
@@ -1338,7 +1348,35 @@
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
+            "text/plain": [
+              "shape: (1309, 14)\n",
+              "┌────────┬──────────┬───────────────────┬────────┬─────┬──────────┬──────┬──────┬──────────────────┐\n",
+              "│ pclass ┆ survived ┆ name              ┆ sex    ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest        │\n",
+              "│ ---    ┆ ---      ┆ ---               ┆ ---    ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---              │\n",
+              "│ i64    ┆ i64      ┆ str               ┆ str    ┆     ┆ str      ┆ str  ┆ i64  ┆ str              │\n",
+              "╞════════╪══════════╪═══════════════════╪════════╪═════╪══════════╪══════╪══════╪══════════════════╡\n",
+              "│ 3      ┆ 0        ┆ Storey, Mr.       ┆ male   ┆ ... ┆ S        ┆ null ┆ 261  ┆ null             │\n",
+              "│        ┆          ┆ Thomas            ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 0        ┆ Andrews, Mr.      ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Belfast, NI      │\n",
+              "│        ┆          ┆ Thomas Jr         ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 0        ┆ Chisholm, Mr.     ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Liverpool,       │\n",
+              "│        ┆          ┆ Roderick Robert   ┆        ┆     ┆          ┆      ┆      ┆ England /        │\n",
+              "│        ┆          ┆ Cr...             ┆        ┆     ┆          ┆      ┆      ┆ Belfast          │\n",
+              "│ 1      ┆ 0        ┆ Fry, Mr. Richard  ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ null             │\n",
+              "│ ...    ┆ ...      ┆ ...               ┆ ...    ┆ ... ┆ ...      ┆ ...  ┆ ...  ┆ ...              │\n",
+              "│ 1      ┆ 1        ┆ Cardeza, Mr.      ┆ male   ┆ ... ┆ C        ┆ 3    ┆ null ┆ Austria-Hungary  │\n",
+              "│        ┆          ┆ Thomas Drake      ┆        ┆     ┆          ┆      ┆      ┆ / Germantown,    │\n",
+              "│        ┆          ┆ Martin...         ┆        ┆     ┆          ┆      ┆      ┆ Ph...            │\n",
+              "│ 1      ┆ 1        ┆ Cardeza, Mrs.     ┆ female ┆ ... ┆ C        ┆ 3    ┆ null ┆ Germantown,      │\n",
+              "│        ┆          ┆ James Warburton   ┆        ┆     ┆          ┆      ┆      ┆ Philadelphia, PA │\n",
+              "│        ┆          ┆ Ma...             ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 1        ┆ Lesurer, Mr.      ┆ male   ┆ ... ┆ C        ┆ 3    ┆ null ┆ null             │\n",
+              "│        ┆          ┆ Gustave J         ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 1        ┆ Ward, Miss. Anna  ┆ female ┆ ... ┆ C        ┆ 3    ┆ null ┆ null             │\n",
+              "└────────┴──────────┴───────────────────┴────────┴─────┴──────────┴──────┴──────┴──────────────────┘"
+            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -2566,32 +2604,10 @@
               "</tbody>\n",
               "</table>\n",
               "</div>"
-            ],
-            "text/plain": [
-              "shape: (1309, 14)\n",
-              "┌────────┬──────────┬─────────────────────────────┬────────┬─────┬──────────┬──────┬──────┬────────────────────────────┐\n",
-              "│ pclass ┆ survived ┆ name                        ┆ sex    ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest                  │\n",
-              "│ ---    ┆ ---      ┆ ---                         ┆ ---    ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---                        │\n",
-              "│ i64    ┆ i64      ┆ str                         ┆ str    ┆     ┆ str      ┆ str  ┆ i64  ┆ str                        │\n",
-              "╞════════╪══════════╪═════════════════════════════╪════════╪═════╪══════════╪══════╪══════╪════════════════════════════╡\n",
-              "│ 3      ┆ 0        ┆ Storey, Mr. Thomas          ┆ male   ┆ ... ┆ S        ┆ null ┆ 261  ┆ null                       │\n",
-              "│ 1      ┆ 0        ┆ Andrews, Mr. Thomas Jr      ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Belfast, NI                │\n",
-              "│ 1      ┆ 0        ┆ Chisholm, Mr. Roderick      ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Liverpool, England /       │\n",
-              "│        ┆          ┆ Robert Cr...                ┆        ┆     ┆          ┆      ┆      ┆ Belfast                    │\n",
-              "│ 1      ┆ 0        ┆ Fry, Mr. Richard            ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ null                       │\n",
-              "│ ...    ┆ ...      ┆ ...                         ┆ ...    ┆ ... ┆ ...      ┆ ...  ┆ ...  ┆ ...                        │\n",
-              "│ 1      ┆ 1        ┆ Cardeza, Mr. Thomas Drake   ┆ male   ┆ ... ┆ C        ┆ 3    ┆ null ┆ Austria-Hungary /          │\n",
-              "│        ┆          ┆ Martin...                   ┆        ┆     ┆          ┆      ┆      ┆ Germantown, Ph...          │\n",
-              "│ 1      ┆ 1        ┆ Cardeza, Mrs. James         ┆ female ┆ ... ┆ C        ┆ 3    ┆ null ┆ Germantown, Philadelphia,  │\n",
-              "│        ┆          ┆ Warburton Ma...             ┆        ┆     ┆          ┆      ┆      ┆ PA                         │\n",
-              "│ 1      ┆ 1        ┆ Lesurer, Mr. Gustave J      ┆ male   ┆ ... ┆ C        ┆ 3    ┆ null ┆ null                       │\n",
-              "│ 1      ┆ 1        ┆ Ward, Miss. Anna            ┆ female ┆ ... ┆ C        ┆ 3    ┆ null ┆ null                       │\n",
-              "└────────┴──────────┴─────────────────────────────┴────────┴─────┴──────────┴──────┴──────┴────────────────────────────┘"
             ]
           },
-          "execution_count": 7,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 3
         }
       ],
       "source": [
@@ -15660,22 +15676,34 @@
       "execution_count": null,
       "metadata": {
         "id": "Fx7_avM5gfiT",
-        "outputId": "a540324f-396a-4b35-95cb-b5820ffc6a46"
+        "outputId": "6926887a-d863-4f74-d714-050a307b8dab",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[answer31]\n",
             "\n",
-            "df.filter(pl.col('age').is_between(10,40))\n",
+            "df.filter(pl.col('age').is_between(10,40, closed=\"both\"))\n",
             "\n",
             "\n",
             "----------------------------------------------\n",
             "\n",
             "[Tips]\n",
-            "・is_between(a, b)で「数値がa以上かつb以下」という条件を指定できる\n",
+            "・is_between(a, b)で「数値がaより大きく、b未満」という条件を\n",
+            "　指定できる\n",
+            "・引数closeにて境界条件を指定すること可能\n",
+            "\n",
+            "　closed=\"both\"： a以上、b以下\n",
+            "　closed=\"left\"： a以上、b未満\n",
+            "　closed=\"right\"： aより大きく、b以下\n",
+            "　closed=\"none\"： aより大きく、b未満\n",
+            "\n",
             "・FuterWarningが表示されるため、将来的に仕様変更がある可能性あり\n",
             "\n",
             "----------------------------------------------\n",
@@ -15683,19 +15711,43 @@
             "[参考] pandas記法\n",
             "\n",
             "\n",
-            "df[df['age'].between(10,40)]\n"
+            "df[df['age'].between(10,40)]\n",
+            "\n",
+            "※ pandasのbetweenではbetween(a, b)で「a以上、b以下」となり\n",
+            "　 デフォルトの境界条件が違う\n"
           ]
         },
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\owner\\anaconda3\\lib\\site-packages\\polars\\internals\\expr\\expr.py:3524: FutureWarning: Default behaviour will change from excluding both bounds to including both bounds. Provide a value for the `closed` argument to silence this warning.\n",
-            "  category=FutureWarning,\n"
-          ]
-        },
-        {
+          "output_type": "execute_result",
           "data": {
+            "text/plain": [
+              "shape: (737, 14)\n",
+              "┌────────┬──────────┬───────────────────┬────────┬─────┬──────────┬──────┬──────┬──────────────────┐\n",
+              "│ pclass ┆ survived ┆ name              ┆ sex    ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest        │\n",
+              "│ ---    ┆ ---      ┆ ---               ┆ ---    ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---              │\n",
+              "│ i64    ┆ i64      ┆ str               ┆ str    ┆     ┆ str      ┆ str  ┆ i64  ┆ str              │\n",
+              "╞════════╪══════════╪═══════════════════╪════════╪═════╪══════════╪══════╪══════╪══════════════════╡\n",
+              "│ 1      ┆ 1        ┆ Allen, Miss.      ┆ female ┆ ... ┆ S        ┆ 2    ┆ null ┆ St Louis, MO     │\n",
+              "│        ┆          ┆ Elisabeth Walton  ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 0        ┆ Allison, Mr.      ┆ male   ┆ ... ┆ S        ┆ null ┆ 135  ┆ Montreal, PQ /   │\n",
+              "│        ┆          ┆ Hudson Joshua     ┆        ┆     ┆          ┆      ┆      ┆ Chesterville, ON │\n",
+              "│        ┆          ┆ Creig...          ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 0        ┆ Allison, Mrs.     ┆ female ┆ ... ┆ S        ┆ null ┆ null ┆ Montreal, PQ /   │\n",
+              "│        ┆          ┆ Hudson J C        ┆        ┆     ┆          ┆      ┆      ┆ Chesterville, ON │\n",
+              "│        ┆          ┆ (Bessie...        ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 0        ┆ Andrews, Mr.      ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Belfast, NI      │\n",
+              "│        ┆          ┆ Thomas Jr         ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ ...    ┆ ...      ┆ ...               ┆ ...    ┆ ... ┆ ...      ┆ ...  ┆ ...  ┆ ...              │\n",
+              "│ 3      ┆ 0        ┆ Zabour, Miss.     ┆ female ┆ ... ┆ C        ┆ null ┆ 328  ┆ null             │\n",
+              "│        ┆          ┆ Hileni            ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 3      ┆ 0        ┆ Zakarian, Mr.     ┆ male   ┆ ... ┆ C        ┆ null ┆ 304  ┆ null             │\n",
+              "│        ┆          ┆ Mapriededer       ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 3      ┆ 0        ┆ Zakarian, Mr.     ┆ male   ┆ ... ┆ C        ┆ null ┆ null ┆ null             │\n",
+              "│        ┆          ┆ Ortin             ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 3      ┆ 0        ┆ Zimmerman, Mr.    ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ null             │\n",
+              "│        ┆          ┆ Leo               ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "└────────┴──────────┴───────────────────┴────────┴─────┴──────────┴──────┴──────┴──────────────────┘"
+            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -15728,7 +15780,7 @@
               "    }\n",
               "</style>\n",
               "<table border=\"1\" class=\"dataframe\">\n",
-              "<small>shape: (715, 14)</small>\n",
+              "<small>shape: (737, 14)</small>\n",
               "<thead>\n",
               "<tr>\n",
               "<th>\n",
@@ -16923,31 +16975,10 @@
               "</tbody>\n",
               "</table>\n",
               "</div>"
-            ],
-            "text/plain": [
-              "shape: (715, 14)\n",
-              "┌────────┬──────────┬───────────────────────────────────────┬────────┬─────┬──────────┬──────┬──────┬──────────────────┐\n",
-              "│ pclass ┆ survived ┆ name                                  ┆ sex    ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest        │\n",
-              "│ ---    ┆ ---      ┆ ---                                   ┆ ---    ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---              │\n",
-              "│ i64    ┆ i64      ┆ str                                   ┆ str    ┆     ┆ str      ┆ str  ┆ i64  ┆ str              │\n",
-              "╞════════╪══════════╪═══════════════════════════════════════╪════════╪═════╪══════════╪══════╪══════╪══════════════════╡\n",
-              "│ 1      ┆ 1        ┆ Allen, Miss. Elisabeth Walton         ┆ female ┆ ... ┆ S        ┆ 2    ┆ null ┆ St Louis, MO     │\n",
-              "│ 1      ┆ 0        ┆ Allison, Mr. Hudson Joshua Creig...   ┆ male   ┆ ... ┆ S        ┆ null ┆ 135  ┆ Montreal, PQ /   │\n",
-              "│        ┆          ┆                                       ┆        ┆     ┆          ┆      ┆      ┆ Chesterville, ON │\n",
-              "│ 1      ┆ 0        ┆ Allison, Mrs. Hudson J C (Bessie...   ┆ female ┆ ... ┆ S        ┆ null ┆ null ┆ Montreal, PQ /   │\n",
-              "│        ┆          ┆                                       ┆        ┆     ┆          ┆      ┆      ┆ Chesterville, ON │\n",
-              "│ 1      ┆ 0        ┆ Andrews, Mr. Thomas Jr                ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Belfast, NI      │\n",
-              "│ ...    ┆ ...      ┆ ...                                   ┆ ...    ┆ ... ┆ ...      ┆ ...  ┆ ...  ┆ ...              │\n",
-              "│ 3      ┆ 0        ┆ Zabour, Miss. Hileni                  ┆ female ┆ ... ┆ C        ┆ null ┆ 328  ┆ null             │\n",
-              "│ 3      ┆ 0        ┆ Zakarian, Mr. Mapriededer             ┆ male   ┆ ... ┆ C        ┆ null ┆ 304  ┆ null             │\n",
-              "│ 3      ┆ 0        ┆ Zakarian, Mr. Ortin                   ┆ male   ┆ ... ┆ C        ┆ null ┆ null ┆ null             │\n",
-              "│ 3      ┆ 0        ┆ Zimmerman, Mr. Leo                    ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ null             │\n",
-              "└────────┴──────────┴───────────────────────────────────────┴────────┴─────┴──────────┴──────┴──────┴──────────────────┘"
             ]
           },
-          "execution_count": 32,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 5
         }
       ],
       "source": [
@@ -16957,7 +16988,7 @@
         "print(ans[31]) #解答表示\n",
         "df = initialize1() #初期化\n",
         "\n",
-        "df.filter(pl.col('age').is_between(10,40))\n"
+        "df.filter(pl.col('age').is_between(10,40, closed=\"both\"))\n"
       ]
     },
     {
@@ -24619,8 +24650,8 @@
       ],
       "source": [
         "# 【42】\n",
-        "# applyを用いてdfのfare列に2を掛けて、\n",
-        "# age列に1を足して\n",
+        "# applyを用いてdfのparch列に2を掛けて、\n",
+        "# sibsp列に1を足して\n",
         "# 先頭の5行を表示\n",
         "print(ans[42]) #解答表示\n",
         "df = initialize1() #初期化\n",
@@ -30955,12 +30986,16 @@
       "execution_count": null,
       "metadata": {
         "id": "NID-u3Udgfi7",
-        "outputId": "7c978c8c-383b-4f07-daaa-d481ddad945a"
+        "outputId": "29d5a06a-b319-4b53-8db2-cb048aaf9cc9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 660
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[answer62]\n",
             "\n",
@@ -30976,6 +31011,11 @@
             "\n",
             "df[0, 'name'] = re.sub('Elisabeth','',df[0, 'name'])\n",
             "df[0, 'name']\n",
+            "\n",
+            "[別解2]\n",
+            "re.sub()を使わずreplaceでも置換可能\n",
+            "\n",
+            ".then(df.get_column('name')[0:1][0].replace('Elisabeth',''))\n",
             "\n",
             "----------------------------------------------\n",
             "\n",
@@ -30996,14 +31036,17 @@
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "'Allen, Miss.  Walton'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 63,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
       "source": [
