--- a/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
+++ b/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
@@ -17,15 +17,10 @@
     "**本コンテンツ作成時のPolarsのバージョンは0.15.16**\n",
     "  \n",
     "作成日:2023年2月11日  \n",
-    "最終更新日:2023年2月11日  \n",
+    "最終更新日:2023年2月24日  \n",
     "再配布・改編不可  \n",
-    "作成者：[kunishou](https://qiita.com/kunishou)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "作成者：[kunishou](https://qiita.com/kunishou)\n",
+    "<br>  \n",
     "**以下の手順で100本ノックに取り組むことでより習熟しやすくなります。**\n",
     "\n",
     "① 以下のPolarsに関する記事を一読する  \n",
@@ -55,7 +50,7 @@
       "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: You are using pip version 21.2.4; however, version 23.0 is available.\n",
+      "WARNING: You are using pip version 21.2.4; however, version 23.0.1 is available.\n",
       "You should consider upgrading via the 'C:\\Users\\owner\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n",
       "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Package(s) not found: pyarrow==10.0.1\n"
@@ -15578,7 +15573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15587,13 +15582,21 @@
      "text": [
       "[answer31]\n",
       "\n",
-      "df.filter(pl.col('age').is_between(10,40))\n",
+      "df.filter(pl.col('age').is_between(10,40, closed=\"both\"))\n",
       "\n",
       "\n",
       "----------------------------------------------\n",
       "\n",
       "[Tips]\n",
-      "・is_between(a, b)で「数値がa以上かつb以下」という条件を指定できる\n",
+      "・is_between(a, b)で「数値がaより大きく、b未満」という条件を\n",
+      "　指定できる\n",
+      "・引数closeにて境界条件を指定すること可能\n",
+      "\n",
+      "　closed=\"both\"： a以上、b以下\n",
+      "　closed=\"left\"： a以上、b未満\n",
+      "　closed=\"right\"： aより大きく、b以下\n",
+      "　closed=\"none\"： aより大きく、b未満\n",
+      "\n",
       "・FuterWarningが表示されるため、将来的に仕様変更がある可能性あり\n",
       "\n",
       "----------------------------------------------\n",
@@ -15601,15 +15604,10 @@
       "[参考] pandas記法\n",
       "\n",
       "\n",
-      "df[df['age'].between(10,40)]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\owner\\anaconda3\\lib\\site-packages\\polars\\internals\\expr\\expr.py:3524: FutureWarning: Default behaviour will change from excluding both bounds to including both bounds. Provide a value for the `closed` argument to silence this warning.\n",
-      "  category=FutureWarning,\n"
+      "df[df['age'].between(10,40)]\n",
+      "\n",
+      "※ pandasのbetweenではbetween(a, b)で「a以上、b以下」となり\n",
+      "　 デフォルトの境界条件が違う\n"
      ]
     },
     {
@@ -15646,7 +15644,7 @@
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
-       "<small>shape: (715, 14)</small>\n",
+       "<small>shape: (737, 14)</small>\n",
        "<thead>\n",
        "<tr>\n",
        "<th>\n",
@@ -16843,7 +16841,7 @@
        "</div>"
       ],
       "text/plain": [
-       "shape: (715, 14)\n",
+       "shape: (737, 14)\n",
        "┌────────┬──────────┬───────────────────────────────────────┬────────┬─────┬──────────┬──────┬──────┬──────────────────┐\n",
        "│ pclass ┆ survived ┆ name                                  ┆ sex    ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest        │\n",
        "│ ---    ┆ ---      ┆ ---                                   ┆ ---    ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---              │\n",
@@ -16863,7 +16861,7 @@
        "└────────┴──────────┴───────────────────────────────────────┴────────┴─────┴──────────┴──────┴──────┴──────────────────┘"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16875,7 +16873,7 @@
     "print(ans[31]) #解答表示\n",
     "df = initialize1() #初期化\n",
     "\n",
-    "df.filter(pl.col('age').is_between(10,40))\n"
+    "df.filter(pl.col('age').is_between(10,40, closed=\"both\"))\n"
    ]
   },
   {
@@ -24504,8 +24502,8 @@
    ],
    "source": [
     "# 【42】\n",
-    "# applyを用いてdfのfare列に2を掛けて、\n",
-    "# age列に1を足して\n",
+    "# applyを用いてdfのparch列に2を掛けて、\n",
+    "# sibsp列に1を足して\n",
     "# 先頭の5行を表示\n",
     "print(ans[42]) #解答表示\n",
     "df = initialize1() #初期化\n",
@@ -30780,7 +30778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30801,6 +30799,11 @@
       "\n",
       "df[0, 'name'] = re.sub('Elisabeth','',df[0, 'name'])\n",
       "df[0, 'name']\n",
+      "\n",
+      "[別解2]\n",
+      "re.sub()を使わずreplaceでも置換可能\n",
+      "\n",
+      ".then(df.get_column('name')[0:1][0].replace('Elisabeth',''))\n",
       "\n",
       "----------------------------------------------\n",
       "\n",
@@ -30826,7 +30829,7 @@
        "'Allen, Miss.  Walton'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
