--- a/notebook/01_Polars_100_Knocks.ipynb
+++ b/notebook/01_Polars_100_Knocks.ipynb
@@ -672,7 +672,7 @@
    "outputs": [],
    "source": [
     "# 【38】\n",
-    "# dfのsex列にてmale→0、femlae→1に\n",
+    "# dfのsex列にてmale→0、female→1に\n",
     "# 変更し、先頭の5行を表示\n",
     "#print(ans[38]) #解答表示\n",
     "df = initialize1() #初期化\n",
