--- a/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
+++ b/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1280,25 +1280,38 @@
      "text": [
       "[answer6]\n",
       "\n",
+      "df.sort('fare')\n",
+      "\n",
+      "[別解]\n",
+      "\n",
       "df.select(pl.all().sort_by('fare'))\n",
       "\n",
       "\n",
       "----------------------------------------------\n",
       "\n",
       "[Tips]\n",
-      "・要素でソートするときはsort_by()を使用\n",
-      "・デフォルトでは昇順\n",
+      "・dataframe.sort()で指定した列でソートが可能\n",
+      "　デフォルトでは昇順\n",
+      "・pl.col().sort_by()でもソート可能\n",
       "・降順でソートしたい場合は reverse=True を指定\n",
       "・ソートする列を複数指定可能\n",
+      "・nullを最後に表示させたい場合は nulls_last=True を指定\n",
       "\n",
       "ex) fare列で降順でソートした後にage列で降順にソートしたい場合は\n",
       "　　以下のように書く\n",
       "※ リスト内でage列を先に書く点に注意\n",
       "\n",
+      "df.sort(['age','fare'], reverse=True)\n",
+      "\n",
+      "(pl.col().sort_by()を使う場合)\n",
+      "\n",
       "df.select(pl.all().sort_by(['age', 'fare'], reverse=True))\n",
       "\n",
-      "・似たメソッドにsort()があるが、これはカラムごとに独立してソートされる点に注意\n",
-      "※ dataframe全体を前処理するようなときは基本的にsort_by()を使うのが良いと思います\n",
+      "\n",
+      "\n",
+      "・似たメソッドにpl.col().sort()があるが、これはカラムごとに独立してソートされる点に注意\n",
+      "※ dataframe全体を前処理するようなときは基本的にdataframe.sort()もしくは\n",
+      "　 pl.col().sort_by()を使うのが良いと思います\n",
       "\n",
       "ex) print(df.select(pl.col(['fare', 'age']).sort(reverse=True, nulls_last=True)).head())\n",
       "\n",
@@ -2579,7 +2592,7 @@
        "└────────┴──────────┴─────────────────────────────┴────────┴─────┴──────────┴──────┴──────┴────────────────────────────┘"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2590,7 +2603,7 @@
     "print(ans[6]) #解答表示\n",
     "df = initialize1() #初期化\n",
     "\n",
-    "df.select(pl.all().sort_by('fare'))\n",
+    "df.sort('fare')\n",
     "\n"
    ]
   },
@@ -22922,7 +22935,7 @@
    ],
    "source": [
     "# 【38】\n",
-    "# dfのsex列にてmale→0、femlae→1に\n",
+    "# dfのsex列にてmale→0、female→1に\n",
     "# 変更し、先頭の5行を表示\n",
     "print(ans[38]) #解答表示\n",
     "df = initialize1() #初期化\n",
