--- a/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
+++ b/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
@@ -31,46 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: polars==0.15.16 in c:\\users\\owner\\anaconda3\\lib\\site-packages (0.15.16)\n",
-      "Requirement already satisfied: typing_extensions>=4.0.0 in c:\\users\\owner\\anaconda3\\lib\\site-packages (from polars==0.15.16) (4.4.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: You are using pip version 21.2.4; however, version 23.0.1 is available.\n",
-      "You should consider upgrading via the 'C:\\Users\\owner\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\users\\owner\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Package(s) not found: pyarrow==10.0.1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[answer0]\n",
-      "\n",
-      "このように解答コード例がここに表示されます。\n",
-      "各問題の解答コード例を表示するときはprintの前の\n",
-      "#を消して実行して下さい。\n",
-      "\n",
-      "コード例をセル内にコピー&ペーストし\n",
-      "実行すると、正解のデータが表示されます\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Shift + Enterで題材データ、回答コードを読み込んで下さい\n",
     "\n",
@@ -18921,7 +18884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -18947,22 +18910,197 @@
       "\n",
       "df.nunique()\n",
       "\n",
-      "\n",
-      "pclass 3\n",
-      "survived 2\n",
-      "name 1307\n",
-      "sex 2\n",
-      "age 99\n",
-      "sibsp 7\n",
-      "parch 8\n",
-      "ticket 929\n",
-      "fare 282\n",
-      "cabin 187\n",
-      "embarked 4\n",
-      "boat 28\n",
-      "body 122\n",
-      "home.dest 370\n"
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe td {\n",
+       "        white-space: pre;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe td {\n",
+       "        padding-top: 0;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe td {\n",
+       "        padding-bottom: 0;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe td {\n",
+       "        line-height: 95%;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "<small>shape: (1, 14)</small>\n",
+       "<thead>\n",
+       "<tr>\n",
+       "<th>\n",
+       "pclass\n",
+       "</th>\n",
+       "<th>\n",
+       "survived\n",
+       "</th>\n",
+       "<th>\n",
+       "name\n",
+       "</th>\n",
+       "<th>\n",
+       "sex\n",
+       "</th>\n",
+       "<th>\n",
+       "age\n",
+       "</th>\n",
+       "<th>\n",
+       "sibsp\n",
+       "</th>\n",
+       "<th>\n",
+       "parch\n",
+       "</th>\n",
+       "<th>\n",
+       "ticket\n",
+       "</th>\n",
+       "<th>\n",
+       "fare\n",
+       "</th>\n",
+       "<th>\n",
+       "cabin\n",
+       "</th>\n",
+       "<th>\n",
+       "embarked\n",
+       "</th>\n",
+       "<th>\n",
+       "boat\n",
+       "</th>\n",
+       "<th>\n",
+       "body\n",
+       "</th>\n",
+       "<th>\n",
+       "home.dest\n",
+       "</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "</tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr>\n",
+       "<td>\n",
+       "3\n",
+       "</td>\n",
+       "<td>\n",
+       "2\n",
+       "</td>\n",
+       "<td>\n",
+       "1307\n",
+       "</td>\n",
+       "<td>\n",
+       "2\n",
+       "</td>\n",
+       "<td>\n",
+       "99\n",
+       "</td>\n",
+       "<td>\n",
+       "7\n",
+       "</td>\n",
+       "<td>\n",
+       "8\n",
+       "</td>\n",
+       "<td>\n",
+       "929\n",
+       "</td>\n",
+       "<td>\n",
+       "282\n",
+       "</td>\n",
+       "<td>\n",
+       "187\n",
+       "</td>\n",
+       "<td>\n",
+       "4\n",
+       "</td>\n",
+       "<td>\n",
+       "28\n",
+       "</td>\n",
+       "<td>\n",
+       "122\n",
+       "</td>\n",
+       "<td>\n",
+       "370\n",
+       "</td>\n",
+       "</tr>\n",
+       "</tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "shape: (1, 14)\n",
+       "┌────────┬──────────┬──────┬─────┬─────┬──────────┬──────┬──────┬───────────┐\n",
+       "│ pclass ┆ survived ┆ name ┆ sex ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest │\n",
+       "│ ---    ┆ ---      ┆ ---  ┆ --- ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---       │\n",
+       "│ u32    ┆ u32      ┆ u32  ┆ u32 ┆     ┆ u32      ┆ u32  ┆ u32  ┆ u32       │\n",
+       "╞════════╪══════════╪══════╪═════╪═════╪══════════╪══════╪══════╪═══════════╡\n",
+       "│ 3      ┆ 2        ┆ 1307 ┆ 2   ┆ ... ┆ 4        ┆ 28   ┆ 122  ┆ 370       │\n",
+       "└────────┴──────────┴──────┴─────┴─────┴──────────┴──────┴──────┴───────────┘"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -18971,8 +19109,7 @@
     "print(ans[34]) #解答表示\n",
     "df = initialize1() #初期化\n",
     "\n",
-    "for col in df.columns:\n",
-    "    print(col, df[col].n_unique())\n"
+    "df.select(pl.all().n_unique())\n"
    ]
   },
   {
