--- a/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
+++ b/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
@@ -18884,7 +18884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18892,6 +18892,11 @@
      "output_type": "stream",
      "text": [
       "[answer34]\n",
+      "\n",
+      "df.select(pl.all().n_unique())\n",
+      "\n",
+      "\n",
+      "[別解]\n",
       "\n",
       "for col in df.columns:\n",
       "    print(col, df[col].n_unique())\n",
@@ -19098,7 +19103,7 @@
        "└────────┴──────────┴──────┴─────┴─────┴──────────┴──────┴──────┴───────────┘"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
